# TorPlayer3

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build.yml  release.yml  test.yml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: lifecycle_manager.dart  main.dart
lib/constants/: environment_vars.dart
lib/routers/: app_routes.dart  go_routes.dart  scaffold_with_nested_navigation.dart
lib/services/preferences/: preferences_service.dart
lib/views/: home_view.dart  settings_view.dart  torrent_detail_view.dart
lib/views/components/: buttons.dart
lib/views/player/: file_stats.dart  (+1 more)
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
scripts/: build-linux.sh  build-macos.sh  build-windows.sh
test/: widget_test.dart
torrent/: .gitignore  .metadata  Makefile  README.md  ffigen.yaml  pubspec.yaml
torrent/example/: pubspec.yaml
torrent/lib/: torrent.dart  torrent_bindings_generated.dart
torrent/macos/: torrent.podspec
torrent/src/: CMakeLists.txt  torrent.c
torrent/src/cmd/server/: main.go
torrent/src/http/: http_stats.go  http_stream.go  http_torrent.go  openapi_generated_api.go  openapi_generated_types.go
torrent/src/torrent/: manager_add.go  manager_cancel.go  manager_get.go  manager_stats.go
web/: index.html  manifest.json
windows/: CMakeLists.txt  torplayer.iss
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+14 files in other folders)
